@startuml PatronDAO
abstract class dao.FabricaDAO

class dao.ClienteDAOImpl
class dao.EmpleadoDAOImpl
class dao.ConexionSQLite
class dao.SqlFabricaDAO
class main.ComponenteNegocio
class main.Main
interface dao.EmpleadoDAO
interface dao.ClienteDAO


main.Main -> main.ComponenteNegocio
dao.EmpleadoDAOImpl -down-> dao.ConexionSQLite 
dao.ClienteDAOImpl -down-> dao.ConexionSQLite
dao.EmpleadoDAOImpl ..|> dao.EmpleadoDAO
dao.ClienteDAOImpl ..|> dao.ClienteDAO
dao.SqlFabricaDAO -up-|> dao.FabricaDAO
dao.SqlFabricaDAO ..> dao.EmpleadoDAOImpl
dao.SqlFabricaDAO ..> dao.ClienteDAOImpl
main.ComponenteNegocio ..> dao.FabricaDAO
main.ComponenteNegocio .. dto.EmpleadoDTO
main.ComponenteNegocio .. dto.ClienteDTO
main.ComponenteNegocio ..> dao.ClienteDAO
main.ComponenteNegocio ..> dao.EmpleadoDAO
@enduml